# ArduinoSnake

./: .gitignore  ArduinoGame.cpp  ArduinoGame.h  CMakeLists.txt  GameManager.h  main.cpp
game/: Board.cpp  Board.h  BoardState.h  Entity.cpp  Food.cpp  Food.h  Snake.cpp  Snake.h  SnakeSegment.cpp
input/: ArduinoInputReader.cpp  ArduinoInputReader.h  ButtonState.h  InputState.cpp  InputState.h
main/: ArduinoGame.cpp  ArduinoGame.h  ArduinoInputReader.cpp  ArduinoRenderer.cpp  ArduinoRenderer.h  DiffDescription.cpp  Direction.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  InputState.cpp  InputState.h  Renderer.cpp  Renderer.h  Snake.cpp  SnakeSegment.h  Timer.cpp  Timer.h  Waiter.cpp  Waiter.h  main.ino
main/build-mega-atmega2560/: ArduinoGame.cpp.d  ArduinoInputReader.cpp.d  ArduinoRenderer.cpp.d  Board.cpp.d  DiffDescription.cpp.d  Entity.cpp.d  Food.cpp.d  GameManager.cpp.d  InputState.cpp.d  Renderer.cpp.d  Snake.cpp.d  SnakeSegment.cpp.d  Timer.cpp.d  Waiter.cpp.d  main.elf  main.hex  main.ino.d
main/build-mega-atmega2560/core/: CDC.cpp.d  HardwareSerial.cpp.d  HardwareSerial0.cpp.d  HardwareSerial1.cpp.d  HardwareSerial2.cpp.d  HardwareSerial3.cpp.d  IPAddress.cpp.d  PluggableUSB.cpp.d  Print.cpp.d  Stream.cpp.d  Tone.cpp.d  USBCore.cpp.d  WInterrupts.c.d  WMath.cpp.d  WString.cpp.d  abi.cpp.d  hooks.c.d  main.cpp.d  new.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_digital.c.d  wiring_pulse.S.d  (+2 more)
renderer/: ArduinoRenderer.cpp  ArduinoRenderer.h  DiffDescription.h  Renderer.cpp  Renderer.h
timer/: Timer.cpp  Timer.h  Waiter.cpp  Waiter.h
(+47 files in other folders)
